--- a/partials-scss/composantes/_footer.scss
+++ b/partials-scss/composantes/_footer.scss
@@ -344,7 +344,7 @@
     }
   }
  
-  .btn {
+  .btn-don-footer {
     display: flex;
     color: #fff;
     border: solid;
